--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Teacher Portal</title>
         <script type="text/javascript" src="vendor/jquery-3.3.1.min.js"></script>
         <script type="text/javascript" src="vendor/underscore.js"></script>
@@ -14,7 +15,7 @@
         <!--Teacher Portal Speciific-->
         <div class="app-holder"></div>
         <link rel="stylesheet" type="text/css" href="teacher-portal\css\common.css"/>
-        <link rel="stylesheet" type="text/css" href="teacher-portal\css\dashboard.css"/>
+        <link rel="stylesheet" type="text/css" href="teacher-portal\css\login.css"/>
         <script type="text/javascript" src="vendor/require.js" data-main="main"></script>
     </body>
 </html>
