WIP: Add Changes

--- a/dashboard.html
+++ b/dashboard.html
@@ -10,12 +10,16 @@
         <script type="text/javascript" src="vendor/bootstrap-4.0.0-dist/js/bootstrap.min.js"></script>
         <script type="text/javascript" charset="utf8" src="vendor/DataTables/datatables.js"></script>
         <script type="text/javascript" charset="utf8" src="vendor/DataTables/DataTables-1.10.18/js/jquery.dataTables.js"></script>
+        <script type="text/javascript" charset="utf8" src="vendor/DataTables/DataTables-1.10.18/js/dataTables.jqueryui.js"></script>
+        <script type="text/javascript" charset="utf8" src="vendor/jquery-ui-1.12.1.custom/jquery-ui.js"></script>
 
         <link rel="stylesheet" type="text/css" href="vendor\bootstrap-4.0.0-dist\css\bootstrap.min.css" />
         <link rel="stylesheet" type="text/css" href="vendor\DataTables\datatables.css">
         <link rel="stylesheet" type="text/css" href="vendor\DataTables\DataTables-1.10.18\css\jquery.dataTables.css">
         <link rel="stylesheet" type="text/css" href="vendor\DataTables\DataTables-1.10.18\css\dataTables.bootstrap.css">
         <link rel="stylesheet" href="vendor/fontawesome-free-5.3.1-web/css/all.css">
+        <link rel="stylesheet" href="vendor/DataTables/DataTables-1.10.18/css/dataTables.jqueryui.css">
+        <link rel="stylesheet" href="vendor/jquery-ui-1.12.1.custom/jquery-ui.css">
     </head>
     <body>
         <!--Dashboard Speciific-->
